# nph-quest3-vr

./: .gitignore  CLAUDE.md
Desktop/fre/cochrane_bias_assessment/: .env.example  .gitignore  CLAUDE.md  cochrane_rob_tools_report.md  pyproject.toml
Desktop/fre/cochrane_bias_assessment/data/templates/: rob2_signalling_questions.json
Desktop/fre/cochrane_bias_assessment/rob_assess/: cli.py
Desktop/fre/cochrane_bias_assessment/rob_assess/agents/: base_agent.py  confidence_scorer.py  fact_mapper.py  orchestrator.py
Desktop/fre/cochrane_bias_assessment/rob_assess/agents/domain_agents/: d1_randomization.py  d2_deviations.py  d3_missing_data.py  d4_outcome_measurement.py  (+1 more)
Desktop/fre/cochrane_bias_assessment/rob_assess/algorithms/: base_algorithm.py  overall_judgment.py  rob2_algorithms.py
Desktop/fre/cochrane_bias_assessment/rob_assess/extraction/: pdf_reader.py  text_chunker.py
Desktop/fre/cochrane_bias_assessment/rob_assess/models/: assessment.py  common.py  extraction.py  rob2.py
Desktop/fre/cochrane_bias_assessment/rob_assess/output/: excel_export.py  json_export.py  robvis_csv.py
Desktop/fre/cochrane_bias_assessment/rob_assess/review/: interactive_review.py
Desktop/fre/cochrane_bias_assessment/tests/test_algorithms/: test_d1_randomization.py  test_d2_deviations.py  test_d3_missing_data.py  test_d4_outcome_measurement.py  test_d5_selective_reporting.py  test_overall_judgment.py
Desktop/fre/cochrane_bias_assessment/tests/test_models/: test_assessment.py  test_common.py
Desktop/fre/cochrane_bias_assessment/tests/test_output/: test_robvis_csv.py
(+57 files in other folders)
