[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rob-assess"
version = "0.1.0"
description = "Cochrane Risk of Bias (RoB 2) assessment tool using GEPA: Guided Extraction + Programmatic Assessment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Matheus Rech"},
]
keywords = ["cochrane", "risk-of-bias", "rob2", "systematic-review", "meta-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "click>=8.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
rob-assess = "rob_assess.cli:cli"

[tool.setuptools.packages.find]
include = ["rob_assess*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring API calls or PDF files",
]

[tool.ruff]
target-version = "py312"
line-length = 100
